src/styles/sections/_photo.sass
.image
  &-wrap
    position: relative
    margin-bottom: 0
    height: 100vh

    @media (max-height: 511px)
      height: 200vh

    @media (max-width: 1199px)
      height: 89vh

    img
      object-fit: cover
      min-height: 100%
      min-width: 100%

    &:after
      content: ''
      position: absolute
      top: 0
      left: 0
      right: 0
      bottom: 0
      z-index: 9
      background: rgba(0, 0, 0, .5)

  &-caption
    position: absolute
    bottom: 9rem
    left: 0
    right: 0
    padding: 0 3rem 0 1rem
    z-index: 10

    @media (min-width: 415px)
      padding: 0 6rem

    @media (min-width: 1200px)
      bottom: 5rem

    @media (min-width: 1680px)
      bottom: 13.5rem

    h2
      font-size: 2.25rem
      line-height: 1.2

      @media (min-width: 415px)
        font-size: 4rem

      @media (min-width: 1680px)
        padding-right: 8rem

